@@ -1,3 +1,5 @@
+Allow multiple specification of the same option
+
 2019/03/13 ver2.0.1
 Add many
 
